--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "typestyle": "^2.0.4"
   },
   "scripts": {
     "serve": "react-scripts start",
@@ -52,7 +53,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
-    "@types/react-router": "^5.1.3",
+    "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "concurrently": "^5.0.2",
     "json-server": "^0.15.1",
