--- a/package.json
+++ b/package.json
@@ -3,28 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/yup": "^0.26.27",
-    "axios": "^0.19.0",
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.2",
+    "@testing-library/user-event": "^10.0.1",
+    "@types/yup": "^0.26.35",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "formik": "^2.1.2",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
+    "formik": "^2.1.4",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^3.7.4",
-    "typestyle": "^2.0.4",
+    "typescript": "^3.8.3",
+    "typestyle": "^2.1.0",
     "yup": "^0.28.3"
   },
   "scripts": {
@@ -51,15 +51,15 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^24.0.25",
-    "@types/node": "^13.1.4",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-router": "^5.1.4",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.1",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router": "^5.1.5",
     "@types/react-router-dom": "^5.1.3",
-    "concurrently": "^5.0.2",
-    "json-server": "^0.15.1",
-    "prettier": "^2.0.2"
+    "concurrently": "^5.1.0",
+    "json-server": "^0.16.1",
+    "prettier": "^2.0.4"
   }
 }
