--- a/package.json
+++ b/package.json
@@ -3,37 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^10.0.2",
-    "@testing-library/user-event": "^10.0.1",
-    "@types/yup": "^0.26.35",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "formik": "^2.1.4",
+    "@reduxjs/toolkit": "^1.4.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/user-event": "^12.1.7",
+    "@types/yup": "^0.29.7",
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
+    "formik": "^2.1.7",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^3.8.3",
+    "typescript": "^4.0.3",
     "typestyle": "^2.1.0",
-    "yup": "^0.28.3"
+    "yup": "^0.29.3"
   },
   "scripts": {
-    "serve": "react-scripts start",
+    "start": "npm run checkTs && react-scripts start",
     "backend": "json-server --watch db.json --port 5000 --delay=1000",
-    "start": "concurrently \"yarn run backend\" \"yarn run serve\"",
-    "build": "react-scripts build",
+    "start:fullstack": "concurrently \"npm run backend\" \"npm run start\"",
+    "build": "npm run checkTs && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "checkTs": "tsc --noEmit"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,15 +53,17 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.11.1",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router": "^5.1.5",
-    "@types/react-router-dom": "^5.1.3",
-    "concurrently": "^5.1.0",
-    "json-server": "^0.16.1",
-    "prettier": "^2.0.4"
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.50",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "concurrently": "^5.3.0",
+    "husky": "^4.3.0",
+    "json-server": "^0.16.2",
+    "lint-staged": "^10.4.0",
+    "prettier": "^2.1.2"
   }
 }
