added commit guard

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,9 @@
 {
-  "printWidth": 120,
-  "proseWrap": "preserve",
-  "semi": false,
-  "singleQuote": false,
-  "useTabs": false,
+  "printWidth": 80,
   "tabWidth": 2,
-  "arrowParens": "avoid",
-  "trailingComma": "es5"
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "arrowParens": "avoid"
 }
