--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
-    "@types/redux-logger": "^3.0.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/redux-logger": "^3.0.8",
     "@types/webpack-env": "^1.15.3",
     "@types/yup": "^0.29.7",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "formik": "^2.1.7",
-    "react": "^16.13.1",
+    "react": "^17.0.0-rc.2",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.0-rc.2",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
